# codewiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
codewiki/: __init__.py  __main__.py  detect_stale.py  frontmatter.py  list_dead_links.py  list_orphans.py
commands/wiki/: bootstrap.md  ingest.md  lint.md  query.md  sync.md
docs/: DESIGN.md  USAGE.md
skills/codewiki/: SKILL.md
skills/codewiki/templates/: comparison.md  concept.md  flow.md  module.md
tests/: conftest.py  test_detect_stale.py  test_frontmatter.py  test_list_dead_links.py  test_list_orphans.py
